--- a/LABOR0001/LABOR0005_WEB/pom.xml
+++ b/LABOR0001/LABOR0005_WEB/pom.xml
@@ -24,6 +24,7 @@
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>5.2</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
@@ -46,6 +47,7 @@
             <groupId>org.primefaces</groupId>
             <artifactId>rio</artifactId>
             <version>2.0.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>biz.gabrys.lesscss</groupId>
