--- a/LABOR0001/LABOR0004_REMOTE/pom.xml
+++ b/LABOR0001/LABOR0004_REMOTE/pom.xml
@@ -8,6 +8,19 @@
     </parent>
     <artifactId>LABOR0004_REMOTE</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.lab</groupId>
+            <artifactId>LABOR0002_DOMAIN</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
